--- a/css/custom.style.twilio.css
+++ b/css/custom.style.twilio.css
@@ -1,8 +1,21 @@
-.jumbotron{
+h1, h2, h3, h4, h5{
+	text-align: center;
+}
+
+#jumbotron{
 
 	padding-bottom: 8px;
+	padding-left: 4%;
+	padding-right: 4%;
 
 }
+
+@media (min-width: 434px) {
+	h1, h2, h3, h4, h5{
+		text-align: left;
+	}
+}
+
 
 .b-red {
 
