--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4157,6 +4157,7 @@ select[multiple].input-group-sm > .input-group-btn > .btn {
   margin-bottom: 0;
   border-width: 1px 0 0;
 }
+
 .navbar-brand {
   float: left;
   height: 50px;
@@ -4479,13 +4480,14 @@ fieldset[disabled] .navbar-default .btn-link:focus {
   border-color: #080808;
 }
 .navbar-inverse .navbar-brand {
-  color: #9d9d9d;
+  color: #f2f2f2;
 }
 .navbar-inverse .navbar-brand:hover,
 .navbar-inverse .navbar-brand:focus {
-  color: #fff;
+  color: #c00;
   background-color: transparent;
 }
+
 .navbar-inverse .navbar-text {
   color: #9d9d9d;
 }
