--- a/css/custom.style.twilio.css
+++ b/css/custom.style.twilio.css
@@ -59,6 +59,10 @@
 	}
 }
 
+h2{
+	padding-top: 3px;
+}
+
 
 .b-red {
 
@@ -78,5 +82,6 @@
 	width: 90%;
 	font-size: 110%;
 	text-align: left;
+
 
 }
